# xiaodu_voice_control_service

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.build_by_self.yaml  docker-compose.example.yml  docker-compose.yaml  pyproject.toml
src/xiaodu_voice_control/: __init__.py  app.py  auth.py  bootstrap.py  config.py  device_registry.py  ha_client.py  management.py  models.py  protocol.py  routes.py  token_store.py
src/xiaodu_voice_control/templates/: login.html  manage.html
